--- a/engineerDashboard.html
+++ b/engineerDashboard.html
@@ -29,7 +29,7 @@
     -->
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="http://www.creative-tim.com" class="simple-text">
+                    <a href="#" class="simple-text">
                         Company LOGO
                     </a>
                 </div>
@@ -74,7 +74,7 @@
             <!-- End Navbar -->
             <div class="dashboardPanel">
               <div id="appointDiv" class="appoint">
-                  <h3>Appointed Manholes</h3>
+                  <h3>Assigned Manholes</h3>
               </div>
             </div>
 </div>
