--- a/user.html
+++ b/user.html
@@ -28,7 +28,7 @@
     -->
             <div class="sidebar-wrapper">
                 <div class="logo">
-                    <a href="http://www.creative-tim.com" class="simple-text">
+                    <a href="#" class="simple-text">
                         Company LOGO
                     </a>
                 </div>
