style and functions

--- a/manholeList.html
+++ b/manholeList.html
@@ -123,16 +123,16 @@
                                         </div>
                                         
                                          <div class="formElements">
-                                         <label>Date of job issue :</label><input type="date" id="doi" readonly>
+                                         <label>Date of job issue :</label><input type="date" id="doi">
                                          </div>
                                          <div class="formElements">
                                              <label>Date of completion:</label><input type="date" id="doc">
                                          </div>
                                          <div class="formElements">
-                                             <label>Job Number:</label><input type="text" id="jobNo" readonly>
+                                             <label>Job Number:</label><input type="text" id="jobNo">
                                          </div>
                                          <div class="formElements">
-                                             <label>Manhole Id:</label><input type="text" id="manholeId" readonly>
+                                             <label>Map Id:</label><input type="text" id="mapId">
                                          </div>
                                          <div class="formElements">
                                              <label>Start Time:</label><input type="time" id="time">
