--- a/user.html
+++ b/user.html
@@ -79,14 +79,9 @@
                             </li>
                         </ul>
                         <ul class="navbar-nav ml-auto">
+                                                       
                             <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Account</span>
-                                </a>
-                            </li>
-                           
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pablo">
+                                <a class="nav-link" href="signIn.html">
                                     <span class="no-icon">Log out</span>
                                 </a>
                             </li>
