--- a/engineerDashboard.html
+++ b/engineerDashboard.html
@@ -59,6 +59,7 @@
                         <span class="navbar-toggler-bar burger-lines"></span>
                         <span class="navbar-toggler-bar burger-lines"></span>
                     </button>
+
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
                         <ul class="nav navbar-nav ml-auto">
                             <li class="nav-item">
@@ -73,8 +74,14 @@
             </nav>
             <!-- End Navbar -->
             <div class="dashboardPanel">
-              <div id="appointDiv" class="appoint">
+              <div class="appoint">
                   <h3>Assigned Manholes</h3>
+                  <table id="appointDiv">
+                      <thead>
+                          <td class="engLocation">Location</td>
+                          <td class="engId">Manhole Id</td>
+                      </thead>
+                    </table>
               </div>
             </div>
 </div>
